# claw-automotive

./: ROADMAP.md
.omx/cc2/: board.json  board.md  render_board_md.py
.omx/ultragoal/: goals.json  ledger.jsonl
automotive-host/: AGENTS.md  Cargo.toml  DEVELOPING.md  README.md  ROADMAP-v3.md
automotive-host/src/: audit.rs  bridge.rs  host.rs  lib.rs  main.rs  policy.rs  procedures.rs  schemas.rs  sessions.rs
automotive-host/src/adapters/: common.rs  lexia.rs  mod.rs  opcom.rs  renolink.rs  xentry.rs
automotive-host/src/types/: dtc.rs  mod.rs
automotive-host/tests/: host_contract.rs
automotive-host/tests/fixtures/dtc_normalization_v1/: j2012_dtc_prefix.json  j2012_extended_eight.json  j2012_lower.json  j2012_spaced_hyphen.json  vendor_opaque.json
rust/crates/api/src/: lib.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: openai_compat_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/runtime/src/: compact.rs  lib.rs  session.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: compact_output.rs  output_format_contract.rs
rust/crates/tools/src/: lib.rs
